padding title mobile

--- a/styles.css
+++ b/styles.css
@@ -364,6 +364,7 @@ body {
     }
     /*header*/
     .topic-info {
+        padding-bottom: 20px;
         justify-content: space-between;
         gap: 0;
         /**/
