--- a/styles.css
+++ b/styles.css
@@ -393,6 +393,7 @@ body {
     .text-wrapper {
         font-size: var(--h-6-font-size);
         font-weight: var(--h-font-weight-Regular);
+        margin-left: -8px;
     }
 
     .nav_degradado {
