--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -57,53 +57,112 @@
     --pomegranate-800: rgba(141, 35, 31, 1);
     --pomegranate-900: rgba(114, 32, 28, 1);
     --pomegranate-950: rgba(61, 13, 13, 1);
+    --colors-forest-green-100: rgba(225, 248, 224, 1);
+    --colors-forest-green-200: rgba(196, 240, 194, 1);
+    --colors-forest-green-300: rgba(150, 226, 147, 1);
+    --colors-forest-green-400: rgba(94, 204, 92, 1);
+    --colors-forest-green-50: rgba(242, 251, 242, 1);
+    --colors-forest-green-500: rgba(57, 177, 54, 1);
+    --colors-forest-green-600: rgba(41, 146, 39, 1);
+    --colors-forest-green-700: rgba(35, 115, 34, 1);
+    --colors-forest-green-800: rgba(33, 91, 32, 1);
+    --colors-forest-green-900: rgba(28, 75, 29, 1);
+    --colors-forest-green-950: rgba(10, 41, 11, 1);
+    --text-white:#fffefe;
+
 
     /*Fonts*/
     --h-1-font-family: "Archivo-Bold", Helvetica;
     --h-1-font-size: 61px;
     --h-1-font-style: normal;
+    --h-1-font-weight: 700;
     --h-1-letter-spacing: 0px;
     --h-1-line-height: 120.00000476837158%;
     --h-2-font-family: "Archivo-Regular", Helvetica;
     --h-2-font-size: 49px;
     --h-2-font-style: normal;
+    --h-2-font-weight: 400;
     --h-2-letter-spacing: 0px;
     --h-2-line-height: 120.00000476837158%;
     --h-3-font-family: "Archivo-Regular", Helvetica;
     --h-3-font-size: 39px;
     --h-3-font-style: normal;
+    --h-3-font-weight: 400;
     --h-3-letter-spacing: 0px;
     --h-3-line-height: 120.00000476837158%;
-    --h-4-font-family: "Archivo-Regular", Helvetica;
-    --h-4-font-size: 31px;
-    --h-4-font-style: normal;
-    --h-4-letter-spacing: 0px;
-    --h-4-line-height: 120.00000476837158%;
-    --h-5-font-family: "Archivo-Bold", Helvetica;
-    --h-5-font-size: 25px;
-    --h-5-font-style: normal;
-    --h-5-letter-spacing: 0px;
-    --h-5-line-height: 120.00000476837158%;
-    --h-6-font-family: "Archivo-Regular", Helvetica;
-    --h-6-font-size: 20px;
-    --h-6-font-style: normal;
-    --h-6-letter-spacing: 0px;
-    --h-6-line-height: 120.00000476837158%;
     --h-7-font-family: "Archivo-Regular", Helvetica;
     --h-7-font-size: 16px;
     --h-7-font-style: normal;
+    --h-7-font-weight: 400;
     --h-7-letter-spacing: 0px;
     --h-7-line-height: 120.00000476837158%;
     --h-8-font-family: "Archivo-Regular", Helvetica;
     --h-8-font-size: 13px;
     --h-8-font-style: normal;
+    --h-8-font-weight: 400;
     --h-8-letter-spacing: 0px;
     --h-8-line-height: 120.00000476837158%;
     --h-9-font-family: "Archivo-Regular", Helvetica;
     --h-9-font-size: 10px;
     --h-9-font-style: normal;
+    --h-9-font-weight: 400;
     --h-9-letter-spacing: 0px;
     --h-9-line-height: 120.00000476837158%;
+    --h4-bold-font-family: "Archivo-Bold", Helvetica;
+    --h4-bold-font-size: 31px;
+    --h4-bold-font-style: normal;
+    --h4-bold-font-weight: 700;
+    --h4-bold-letter-spacing: 0px;
+    --h4-bold-line-height: 120.00000476837158%;
+    --h4-reg-font-family: "Archivo-Regular", Helvetica;
+    --h4-reg-font-size: 31px;
+    --h4-reg-font-style: normal;
+    --h4-reg-font-weight: 400;
+    --h4-reg-letter-spacing: 0px;
+    --h4-reg-line-height: 120.00000476837158%;
+    --h5-bold-font-family: "Archivo-Bold", Helvetica;
+    --h5-bold-font-size: 25px;
+    --h5-bold-font-style: normal;
+    --h5-bold-font-weight: 700;
+    --h5-bold-letter-spacing: 0px;
+    --h5-bold-line-height: 120.00000476837158%;
+    --h5-reg-font-family: "Archivo-Regular", Helvetica;
+    --h5-reg-font-size: 25px;
+    --h5-reg-font-style: normal;
+    --h5-reg-font-weight: 400;
+    --h5-reg-letter-spacing: 0px;
+    --h5-reg-line-height: 120.00000476837158%;
+    --h6-bold-font-family: "Archivo-Bold", Helvetica;
+    --h6-bold-font-size: 20px;
+    --h6-bold-font-style: normal;
+    --h6-bold-font-weight: 700;
+    --h6-bold-letter-spacing: 0px;
+    --h6-bold-line-height: 120.00000476837158%;
+    --h6-reg-font-family: "Archivo-Regular", Helvetica;
+    --h6-reg-font-size: 20px;
+    --h6-reg-font-style: normal;
+    --h6-reg-font-weight: 400;
+    --h6-reg-letter-spacing: 0px;
+    --h6-reg-line-height: 120.00000476837158%;
+    --h7-medium-font-family: "Archivo-Medium", Helvetica;
+    --h7-medium-font-size: 16px;
+    --h7-medium-font-style: normal;
+    --h7-medium-font-weight: 500;
+    --h7-medium-letter-spacing: 0px;
+    --h7-medium-line-height: 120.00000476837158%;
+    --h8-itálica-font-family: "Archivo-Italic", Helvetica;
+    --h8-itálica-font-size: 13px;
+    --h8-itálica-font-style: italic;
+    --h8-itálica-font-weight: 400;
+    --h8-itálica-letter-spacing: 0px;
+    --h8-itálica-line-height: 120.00000476837158%;
+    --h9-light-font-family: "Archivo-Light", Helvetica;
+    --h9-light-font-size: 10px;
+    --h9-light-font-style: normal;
+    --h9-light-font-weight: 300;
+    --h9-light-letter-spacing: 0px;
+    --h9-light-line-height: 120.00000476837158%;
+
 
     /* pesos */
     --h-font-weight-Light: 300;
@@ -138,7 +197,7 @@ body {
     box-sizing: content-box;
 }
 
-/* header */
+/* HEADER */
 .html-card {
     align-items: center;
     align-self: stretch;
@@ -161,14 +220,13 @@ body {
 }
 
 .html-logo-text {
-    color: #fffefe;
+    color: var(--text-white);
     font-family: var(--h6-reg-font-family);
     font-size: var(--h6-reg-font-size);
     font-style: var(--h6-reg-font-style);
-    font-weight: var(--h-font-weight-Regular);
+    font-weight: var(--h6-reg-font-weight);
     letter-spacing: var(--h6-reg-letter-spacing);
     line-height: var(--h6-reg-line-height);
-    position: relative;
     text-align: center;
     white-space: nowrap;
     width: fit-content;
@@ -178,9 +236,9 @@ body {
     height: 35px;
     margin-left: -5px;
     object-fit: cover;
-    position: relative;
     width: 35px;
 }
+
 
 .text {
     align-self: stretch;
@@ -195,7 +253,8 @@ body {
     position: relative;
 }
 
-.frame {
+/* CARDS */
+.frame_body {
     align-items: center;
     align-self: stretch;
     display: flex;
@@ -206,10 +265,11 @@ body {
     width: 100%;
 }
 
-.section {
+/* CARD1 */
+.section-a{
+    display: flex;
     align-items: flex-start;
     align-self: stretch;
-    display: flex;
     flex: 0 0 auto;
     flex-direction: column;
     gap: 10px;
@@ -218,7 +278,7 @@ body {
     width: 100%;
 }
 
-.frame-title {
+.section-title {
     align-items: flex-start;
     align-self: stretch;
     background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
@@ -239,7 +299,7 @@ body {
     width: 239px;
 }
 
-.section-title {
+.title {
     color: #000000;
     flex: 1;
     font-family: var(--h7-medium-font-family);
@@ -253,7 +313,7 @@ body {
     text-align: center;
 }
 
-.div {
+.section-text {
     align-self: stretch;
     color: transparent;
     font-family: "Archivo-Regular", Helvetica;
@@ -262,6 +322,7 @@ body {
     letter-spacing: 0;
     line-height: 15.6px;
     position: relative;
+    overflow: hidden;
 }
 
 .text-wrapper {
