--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -68,7 +68,7 @@
     --colors-forest-green-800: rgba(33, 91, 32, 1);
     --colors-forest-green-900: rgba(28, 75, 29, 1);
     --colors-forest-green-950: rgba(10, 41, 11, 1);
-    --text-white:#fffefe;
+    --text-white: #fffefe;
 
 
     /*Fonts*/
@@ -193,63 +193,77 @@ body {
     gap: 20px;
     padding: 10px;
     position: relative;
-    width: 100%;
     box-sizing: content-box;
 }
 
-/* HEADER */
-.html-card {
+/* HEADER */  
+.header {
     align-items: center;
     align-self: stretch;
     background: linear-gradient(180deg, rgb(213, 57, 33) 0%, rgba(225, 69, 21, 0.2) 77.6%, rgba(255, 255, 255, 0) 100%);
+    background-color: transparent;
+    border-bottom-style: none;
+    border-color: #d53921;
+    border-left-style: solid;
+    border-left-width: 0.5px;
     border-radius: 15px 15px 0px 0px;
+    border-right-style: solid;
+    border-right-width: 0.5px;
+    border-top-style: solid;
+    border-top-width: 2px;
     display: flex;
+    flex: 0 0 auto;
     flex-direction: column;
     gap: 10px;
-    height: auto;
+    margin-bottom: -2px;
+    margin-left: -2px;
+    margin-right: -2px;
+    margin-top: -2px;
     overflow: hidden;
     padding: 10px 5px;
+    position: relative;
     width: 100%;
 }
 
-.html-logo {
+.header-logo {
     align-items: center;
     display: inline-flex;
     flex: 0 0 auto;
     justify-content: center;
+    position: relative;
 }
 
-.html-logo-text {
-    color: var(--text-white);
+.header-logo-text {
+    color: #fffefe;
     font-family: var(--h6-reg-font-family);
     font-size: var(--h6-reg-font-size);
     font-style: var(--h6-reg-font-style);
     font-weight: var(--h6-reg-font-weight);
     letter-spacing: var(--h6-reg-letter-spacing);
     line-height: var(--h6-reg-line-height);
+    position: relative;
     text-align: center;
     white-space: nowrap;
     width: fit-content;
 }
 
-.html-logo-logo {
+.header-logo-logo {
     height: 35px;
     margin-left: -5px;
     object-fit: cover;
+    position: relative;
     width: 35px;
 }
 
-
-.text {
+.header-text {
     align-self: stretch;
     color: #000000;
-    font-family: var(--h-8-font-family);
-    font-size: var(--h-8-font-size);
-    font-style: var(--h-8-font-style);
-    font-weight: var(--h-8-font-weight);
-    letter-spacing: var(--h-8-letter-spacing);
-    line-height: var(--h-8-line-height);
-    margin-bottom: -10px;
+    font-family: var(--h-7-font-family);
+    font-size: var(--h-7-font-size);
+    font-style: var(--h-7-font-style);
+    font-weight: var(--h-7-font-weight);
+    letter-spacing: var(--h-7-letter-spacing);
+    line-height: var(--h-7-line-height);
     position: relative;
 }
 
@@ -266,7 +280,8 @@ body {
 }
 
 /* CARD1 */
-.section-a{
+/* ////// */
+.section {
     display: flex;
     align-items: flex-start;
     align-self: stretch;
@@ -278,7 +293,44 @@ body {
     width: 100%;
 }
 
-.section-title {
+.section_title {
+    align-items: center;
+    background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
+    background-color: rgba(255, 255, 255, 1);
+    display: flex;
+    height: 24px;
+    justify-content: center;
+    padding: 0px 3px;
+    position: relative;
+}
+
+.rectangle {
+    background-color: #b1291d40;
+    border-radius: 40px;
+    flex: 1;
+    flex-grow: 1;
+    height: 12px;
+    position: relative;
+}
+
+.section__title--text {
+    color: #000000;
+    font-family: var(--h6-reg-font-family);
+    font-size: var(--h6-reg-font-size);
+    font-style: var(--h6-reg-font-style);
+    font-weight: var(--h6-reg-font-weight);
+    letter-spacing: var(--h6-reg-letter-spacing);
+    line-height: var(--h6-reg-line-height);
+    margin-top: -1px;
+    position: relative;
+    text-align: center;
+    white-space: nowrap;
+    width: fit-content;
+    
+}
+
+
+ /* {
     align-items: flex-start;
     align-self: stretch;
     background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
@@ -289,7 +341,7 @@ body {
     width: 100%;
 }
 
-.rectangle {
+ {
     background-color: #b1291d40;
     border-radius: 40px;
     height: 8px;
@@ -299,7 +351,7 @@ body {
     width: 239px;
 }
 
-.title {
+ {
     color: #000000;
     flex: 1;
     font-family: var(--h7-medium-font-family);
@@ -311,7 +363,7 @@ body {
     margin-top: -1px;
     position: relative;
     text-align: center;
-}
+} */
 
 .section-text {
     align-self: stretch;
