--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -196,7 +196,7 @@ body {
     box-sizing: content-box;
 }
 
-/* HEADER */  
+/* HEADER */
 .header {
     align-items: center;
     align-self: stretch;
@@ -215,14 +215,9 @@ body {
     flex: 0 0 auto;
     flex-direction: column;
     gap: 10px;
-    margin-bottom: -2px;
-    margin-left: -2px;
-    margin-right: -2px;
-    margin-top: -2px;
     overflow: hidden;
     padding: 10px 5px;
     position: relative;
-    width: 100%;
 }
 
 .header-logo {
@@ -267,24 +262,22 @@ body {
     position: relative;
 }
 
-/* CARDS */
-.frame_body {
+/* FRAME BODY */
+.frame-body{
     align-items: center;
-    align-self: stretch;
     display: flex;
-    flex: 0 0 auto;
     flex-direction: column;
     gap: 10px;
     position: relative;
     width: 100%;
 }
 
-/* CARD1 */
+/* SECTION1 */
 /* ////// */
 .section {
-    display: flex;
     align-items: flex-start;
     align-self: stretch;
+    display: flex;
     flex: 0 0 auto;
     flex-direction: column;
     gap: 10px;
@@ -293,15 +286,16 @@ body {
     width: 100%;
 }
 
-.section_title {
+.section-title {
     align-items: center;
+    align-self: stretch;
     background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
-    background-color: rgba(255, 255, 255, 1);
     display: flex;
     height: 24px;
     justify-content: center;
     padding: 0px 3px;
     position: relative;
+    width: 100%;
 }
 
 .rectangle {
@@ -313,7 +307,7 @@ body {
     position: relative;
 }
 
-.section__title--text {
+.section-title-text {
     color: #000000;
     font-family: var(--h6-reg-font-family);
     font-size: var(--h6-reg-font-size);
@@ -326,178 +320,20 @@ body {
     text-align: center;
     white-space: nowrap;
     width: fit-content;
-    
 }
 
-
- /* {
-    align-items: flex-start;
-    align-self: stretch;
-    background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
-    display: flex;
-    flex: 0 0 auto;
-    gap: 10px;
-    position: relative;
-    width: 100%;
-}
-
- {
-    background-color: #b1291d40;
-    border-radius: 40px;
-    height: 8px;
-    left: 25px;
-    position: absolute;
-    top: 12px;
-    width: 239px;
-}
-
- {
-    color: #000000;
-    flex: 1;
-    font-family: var(--h7-medium-font-family);
-    font-size: var(--h7-medium-font-size);
-    font-style: var(--h7-medium-font-style);
-    font-weight: var(--h7-medium-font-weight);
-    letter-spacing: var(--h7-medium-letter-spacing);
-    line-height: var(--h7-medium-line-height);
-    margin-top: -1px;
-    position: relative;
-    text-align: center;
-} */
-
-.section-text {
+.text {
     align-self: stretch;
     color: transparent;
     font-family: "Archivo-Regular", Helvetica;
-    font-size: 13px;
+    font-size: 16px;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 15.6px;
+    line-height: 19.2px;
     position: relative;
-    overflow: hidden;
 }
 
 .text-wrapper {
-    color: #000000;
-    font-family: var(--h-8-font-family);
-    font-size: var(--h-8-font-size);
-    font-style: var(--h-8-font-style);
-    font-weight: var(--h-8-font-weight);
-    letter-spacing: var(--h-8-letter-spacing);
-    line-height: var(--h-8-line-height);
-}
-
-.span {
-    color: #000000;
-    font-family: var(--h-9-font-family);
-    font-size: var(--h-9-font-size);
-    font-style: var(--h-9-font-style);
-    font-weight: var(--h-9-font-weight);
-    letter-spacing: var(--h-9-letter-spacing);
-    line-height: var(--h-9-line-height);
-}
-
-.text-wrapper-2 {
-    color: #72201c;
-    font-family: var(--h-8-font-family);
-    font-size: var(--h-8-font-size);
-    font-style: var(--h-8-font-style);
-    font-weight: var(--h-8-font-weight);
-    letter-spacing: var(--h-8-letter-spacing);
-    line-height: var(--h-8-line-height);
-}
-
-.text-wrapper-3 {
-    color: #d53921;
-    font-family: var(--h-9-font-family);
-    font-size: var(--h-9-font-size);
-    font-style: var(--h-9-font-style);
-    font-weight: var(--h-9-font-weight);
-    letter-spacing: var(--h-9-letter-spacing);
-    line-height: var(--h-9-line-height);
-}
-
-.text-wrapper-4 {
-    color: #1f1f1f;
-    font-family: var(--h-8-font-family);
-    font-size: var(--h-8-font-size);
-    font-style: var(--h-8-font-style);
-    font-weight: var(--h-8-font-weight);
-    letter-spacing: var(--h-8-letter-spacing);
-    line-height: var(--h-8-line-height);
-}
-
-.text-wrapper-5 {
-    color: #1f1f1f;
-    font-family: var(--h-9-font-family);
-    font-size: var(--h-9-font-size);
-    font-style: var(--h-9-font-style);
-    font-weight: var(--h-9-font-weight);
-    letter-spacing: var(--h-9-letter-spacing);
-    line-height: var(--h-9-line-height);
-}
-
-.text-wrapper-6 {
-    color: #1f1f1f;
-    font-family: var(--h9-light-font-family);
-    font-size: var(--h9-light-font-size);
-    font-style: var(--h9-light-font-style);
-    font-weight: var(--h9-light-font-weight);
-    letter-spacing: var(--h9-light-letter-spacing);
-    line-height: var(--h9-light-line-height);
-}
-
-.text-wrapper-7 {
-    color: #299227;
-    font-family: var(--h9-light-font-family);
-    font-size: var(--h9-light-font-size);
-    font-style: var(--h9-light-font-style);
-    font-weight: var(--h9-light-font-weight);
-    letter-spacing: var(--h9-light-letter-spacing);
-    line-height: var(--h9-light-line-height);
-}
-
-.text-wrapper-8 {
-    color: #000000;
-    font-family: var(--h9-light-font-family);
-    font-size: var(--h9-light-font-size);
-    font-style: var(--h9-light-font-style);
-    font-weight: var(--h9-light-font-weight);
-    letter-spacing: var(--h9-light-letter-spacing);
-    line-height: var(--h9-light-line-height);
-}
-
-.text-wrapper-9 {
-    color: #000000;
-    font-family: var(--h4-reg-font-family);
-    font-size: var(--h4-reg-font-size);
-    font-style: var(--h4-reg-font-style);
-    font-weight: var(--h4-reg-font-weight);
-    letter-spacing: var(--h4-reg-letter-spacing);
-    line-height: var(--h4-reg-line-height);
-}
-
-.text-wrapper-10 {
-    color: #000000;
-    font-family: var(--h5-reg-font-family);
-    font-size: var(--h5-reg-font-size);
-    font-style: var(--h5-reg-font-style);
-    font-weight: var(--h5-reg-font-weight);
-    letter-spacing: var(--h5-reg-letter-spacing);
-    line-height: var(--h5-reg-line-height);
-}
-
-.text-wrapper-11 {
-    color: #000000;
-    font-family: var(--h6-reg-font-family);
-    font-size: var(--h6-reg-font-size);
-    font-style: var(--h6-reg-font-style);
-    font-weight: var(--h6-reg-font-weight);
-    letter-spacing: var(--h6-reg-letter-spacing);
-    line-height: var(--h6-reg-line-height);
-}
-
-.text-wrapper-12 {
     color: #000000;
     font-family: var(--h-7-font-family);
     font-size: var(--h-7-font-size);
@@ -507,28 +343,83 @@ body {
     line-height: var(--h-7-line-height);
 }
 
-.text-wrapper-13 {
+.span {
+    color: #000000;
+    font-family: var(--h-8-font-family);
+    font-size: var(--h-8-font-size);
+    font-style: var(--h-8-font-style);
+    font-weight: var(--h-8-font-weight);
+    letter-spacing: var(--h-8-letter-spacing);
+    line-height: var(--h-8-line-height);
+}
+
+.text-wrapper-2 {
+    color: #72201c;
+    font-family: var(--h-7-font-family);
+    font-size: var(--h-7-font-size);
+    font-style: var(--h-7-font-style);
+    font-weight: var(--h-7-font-weight);
+    letter-spacing: var(--h-7-letter-spacing);
+    line-height: var(--h-7-line-height);
+}
+
+.text-wrapper-3 {
+    text-decoration: none;
+    color: #d53921;
+    font-family: var(--h-8-font-family);
+    font-size: var(--h-8-font-size);
+    font-style: var(--h-8-font-style);
+    font-weight: var(--h-8-font-weight);
+    letter-spacing: var(--h-8-letter-spacing);
+    line-height: var(--h-8-line-height);
+}
+
+.text-wrapper-4 {
+    color: #d53921;
+    font-family: var(--h-7-font-family);
+    font-size: var(--h-7-font-size);
+    font-style: var(--h-7-font-style);
+    font-weight: var(--h-7-font-weight);
+    letter-spacing: var(--h-7-letter-spacing);
+    line-height: var(--h-7-line-height);
+}
+
+.text-wrapper-5 {
+    color: #1f1f1f;
+    font-family: var(--h-7-font-family);
+    font-size: var(--h-7-font-size);
+    font-style: var(--h-7-font-style);
+    font-weight: var(--h-7-font-weight);
+    letter-spacing: var(--h-7-letter-spacing);
+    line-height: var(--h-7-line-height);
+}
+
+.text-wrapper-6 {
+    color: #1f1f1f;
+    font-family: var(--h-8-font-family);
+    font-size: var(--h-8-font-size);
+    font-style: var(--h-8-font-style);
+    font-weight: var(--h-8-font-weight);
+    letter-spacing: var(--h-8-letter-spacing);
+    line-height: var(--h-8-line-height);
+}
+
+.text-wrapper-7 {
     color: #299227;
-    font-family: var(--h-9-font-family);
-    font-size: var(--h-9-font-size);
-    font-style: var(--h-9-font-style);
-    font-weight: var(--h-9-font-weight);
-    letter-spacing: var(--h-9-letter-spacing);
-    line-height: var(--h-9-line-height);
+    font-family: var(--h-8-font-family);
+    font-size: var(--h-8-font-size);
+    font-style: var(--h-8-font-style);
+    font-weight: var(--h-8-font-weight);
+    letter-spacing: var(--h-8-letter-spacing);
+    line-height: var(--h-8-line-height);
 }
 
-.ellipse {
-    height: 817px;
-    left: 249px;
-    position: absolute;
-    top: 0;
-    width: 71px;
-}
-
-.img {
-    height: 817px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 79px;
+.text-wrapper-8 {
+    color: #299227;
+    font-family: var(--h-7-font-family);
+    font-size: var(--h-7-font-size);
+    font-style: var(--h-7-font-style);
+    font-weight: var(--h-7-font-weight);
+    letter-spacing: var(--h-7-letter-spacing);
+    line-height: var(--h-7-line-height);
 }
