--- a/JS/Introducción/estilos.css
+++ b/JS/Introducción/estilos.css
@@ -15,3 +15,13 @@ body{
     font: 5em sans-serif;
     font-weight: 700;
 }
+
+.btn{
+    background-color: rgb(66, 71, 94);
+    padding: 10px 30px;
+    margin: 20px auto;
+    border-radius: 10px;
+    font-weight: 2.5rem;
+    font-size: 1rem;
+    color: white;
+}
